# terrace-heating

./: .env.example  .gitattributes  .gitignore  .gitmodules  BUILDING.md  LICENSE  README.md  docker-compose.dev.yaml  docker-compose.prod.yaml  docker-compose.yaml
.github/workflows/: heat_pump_service.yaml  heating_gateway.yaml  heating_service.yaml  ui.yaml
certs/: generate.sh
envoy/: envoy.yaml
heat_pump_service/: .clang-format  .dockerignore  CMakeLists.txt  Dockerfile  main.cpp
heat_pump_service/communicator/: CMakeLists.txt
heat_pump_service/communicator/include/communicator/: addresses.h  communicator.h  modbus_tcp_communicator.h  registers.h  types.h  utils.h
heat_pump_service/communicator/src/: modbus_tcp_communicator.cpp  registers.h  types.cpp  utils.cpp  utils.h
heat_pump_service/communicator/test/: CMakeLists.txt  mock_modbus_tcp_server.cpp  mock_modbus_tcp_server.h  modbus_tcp_communicator_test.cpp  utils_test.cpp
heat_pump_service/service/: CMakeLists.txt
heat_pump_service/service/include/service/: service.h
heat_pump_service/service/proto/: CMakeLists.txt  heat_pump_service.proto
heat_pump_service/service/src/: service.cpp
heat_pump_service/service/test/: CMakeLists.txt  mock.h  service_test.cpp
heating_gateway/: .dockerignore  .editorconfig  .gitignore  Dockerfile  HeatingGateway.sln  ef_database_update.sh
heating_gateway/HeatingGateway.API/: DependencyInjection.cs  HeatingGateway.API.csproj
heating_gateway/HeatingGateway.API/Common/Errors/: HeatingServiceProblemDetailsFactory.cs
heating_gateway/HeatingGateway.API/Controllers/: ApiController.cs  ErrorController.cs  HeatPumpController.cs
heating_gateway/HeatingGateway.Application/: HeatingGateway.Application.csproj
heating_gateway/HeatingGateway.Application/Domain/: HeatPumpRecord.cs
heating_gateway/HeatingGateway.Application/Migrations/: 20230526174937_Initial.Designer.cs  HeatingDbContextModelSnapshot.cs
heating_gateway/HeatingGateway.Application/Persistence/: HeatingDbContext.cs
heating_gateway/HeatingGateway.Application/Services/: HeatPumpService.cs  HeatingService.cs  IHeatPumpService.cs  IHeatingService.cs
heating_gateway/HeatingGateway.Contracts/: HeatingGateway.Contracts.csproj
heating_gateway/HeatingGateway.Contracts/HeatPump/: BoostingScheduleResponse.cs  PutBoostingScheduleRequest.cs  TankLimitsResponse.cs  TemperaturesResponse.cs
heating_gateway/HeatingGateway.Contracts/Heating/: GetHeatPumpRecordsRequest.cs
heating_gateway/src/HeatingGateway.API/: Program.cs  appsettings.json
heating_gateway/src/HeatingGateway.Application/: DependencyInjection.cs
heating_gateway/tests/HeatingGateway.API.Test/: HeatingControllerTest.cs  HeatingGateway.API.Test.csproj  HistoryControllerTest.cs
heating_gateway/tests/HeatingGateway.Application.Test/: HeatingGateway.Application.Test.csproj  HeatingHistoryServiceTest.cs  HeatingServiceTest.cs  UnitTest1.cs
heating_service/: .dockerignore  .gitignore  Dockerfile  HeatingService.sln
heating_service/HeatingService.API/: DependencyInjection.cs  HeatingService.API.csproj  Program.cs  WeatherForecast.cs  appsettings.Development.json  appsettings.json
heating_service/HeatingService.API/Controllers/: ApiController.cs  ErrorController.cs  HeatPumpController.cs  HeatingController.cs  WeatherForecastController.cs
heating_service/HeatingService.API/Domain/: HeatPumpRecord.cs  HeatingContext.cs  TankLimits.cs  Temperatures.cs
heating_service/HeatingService.API/Migrations/: 20230512152952_InitialCreate.Designer.cs  20230512152952_InitialCreate.cs  HeatingDbContextModelSnapshot.cs
heating_service/HeatingService.API/Properties/: launchSettings.json
heating_service/HeatingService.API/Protos/: heat_pump_service.proto
heating_service/HeatingService.API/Services/: HeatPumpService.cs  IHeatPumpService.cs
heating_service/HeatingService.API/Tasks/: QueryHeatPumpRecordJob.cs  QueryHeatPumpRecordJobOptions.cs
heating_service/HeatingService.Application/: DependencyInjection.cs  HeatingService.Application.csproj
heating_service/HeatingService.Application/Domain/: BoostingSchedule.cs  HeatPumpRecord.cs  TankLimits.cs  Temperatures.cs
heating_service/HeatingService.Application/Migrations/: 20230517190801_Initial.Designer.cs  20230517190801_Initial.cs  20230518154324_IncludeAdjustedTankLimits.Designer.cs  20230518154324_IncludeAdjustedTankLimits.cs  20230519140338_HeatPumpRecordTimeAsKeyAndIndex.Designer.cs  20230519140338_HeatPumpRecordTimeAsKeyAndIndex.cs  HeatingDbContextModelSnapshot.cs
heating_service/HeatingService.Application/Persistence/: HeatingDbContext.cs  IHeatPumpRecordRepository.cs  IRepositoryBase.cs
heating_service/HeatingService.Application/Protos/: heat_pump_service.proto
heating_service/HeatingService.Application/Tasks/: IQueryHeatPumpRecordJob.cs  QueryHeatPumpRecordJob.cs  QueryHeatPumpRecordJobOptions.cs
heating_service/HeatingService.Contracts/HeatPump/: BoostingScheduleResponse.cs  PutBoostingScheduleRequest.cs  TankLimitsResponse.cs  TemperaturesResponse.cs
heating_service/HeatingService.Contracts/Heating/: GetHeatPumpRecordsRequest.cs  HeatPumpRecordResponse.cs
heating_service/HeatingService.Domain/HeatPump/: BoostingSchedule.cs  HeatPumpRecord.cs  TankLimits.cs  Temperatures.cs
heating_service/HeatingService.Infrastructure/: DependencyInjection.cs  HeatingService.Infrastructure.csproj
heating_service/HeatingService.Infrastructure/Migrations/: 20230513081046_Init.Designer.cs  20230513081046_Init.cs  HeatingDbContextModelSnapshot.cs
heating_service/HeatingService.Infrastructure/Persistence/: HeatingDbContext.cs
heating_service/HeatingService.Infrastructure/Tasks/: QueryHeatPumpRecordJob.cs  QueryHeatPumpRecordJobOptions.cs
ui/: .dockerignore  .eslintrc.json  Dockerfile  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json
ui/src/app/: error.tsx  globals.css  heating.ts  layout.tsx  navigation_bar.tsx
ui/src/components/: footer.tsx  header.tsx
(+161 files in other folders)
